Fixed Bug While Getting Image and Showing It In Tasks and Fixed Word Overflow From Container in CSS.

--- a/client/src/views/homeViews.css
+++ b/client/src/views/homeViews.css
@@ -1,6 +1,6 @@
 p {
+  overflow-wrap: break-word;
   word-wrap: break-word;
-  word-break: break-all; /* This will break long words and URLs to prevent overflow */
 }
 
 .top-container {
@@ -57,6 +57,8 @@ p {
 
 .tasks > div img {
   margin-left: 3px;
+  width: 30px;
+  height: 30px;
 }
 
 .tasks div p:hover {
@@ -73,6 +75,11 @@ p {
   justify-content: space-between;
   word-wrap: break-word;
   overflow-wrap: break-word;
+}
+
+.task-input-container > p {
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .input-title {
